# 4brain-welfare

./: .dockerignore  .env.docker  .env.docker.example  .env.example  .gitignore  .gitmessage.txt  CONTRIBUTING.md  DEPLOYMENT_AUTH_CHECKLIST.md  README.md  docker-compose.gpu.yml  docker-compose.yaml  pyproject.toml  pytest.ini  test_langfuse.py
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  Dockerfile  debug_resp_contentsList_GET.txt  debug_resp_contentsList_POST.txt  debug_resp_getContentsListAll.txt  debug_resp_getContentsListAll_GET.txt  debug_resp_themeListNew.txt  debug_resp_themeListNew_Exact.txt  entrypoint.sh  manage.py  requirements.txt  verify_auth.py
backend/accounts/: adapters.py  admin.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
backend/chat/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: exceptions.py  settings.py  urls.py
backend/etl/: tests.py
backend/notifications/: apps.py  models.py  services.py  signals.py  tasks.py
backend/policies/: admin.py  constants.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/scripts/: debug_api_full.py  fetch_seoul_map_data.py  test_api_brute.py  test_referer_variations.py  test_smart_seoul_api.py  test_v5_api.py  test_v5_api_2.py  verify_keys.py
data/raw/: seoul_policies.json
frontend/: next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: WelfareMap.tsx
frontend/constants/: policy-codes.ts
frontend/services/: axios.ts  see.ts
frontend/stores/: auth.store.ts  chatbot.store.ts  font.store.ts  profile.store.ts
infra/: TASKS-BRAIN4-39.md  docker-compose.langfuse.yaml
llm/: Dockerfile
llm/agents/: __init__.py  agent.py  graph.py  state.py  test_graph.py  user_session.py
scripts/: fetch_policies.py  run_etl_batch.sh  smoke_test_mcp.py
(+179 files in other folders)
