[project]
name = "4brain-welfare"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.4.0",
    "django>=5.2.9",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework-simplejwt>=5.5.1",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.1.6",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]